fix(ui/select): fix select overflow

--- a/packages/varlet-ui/src/select/select.less
+++ b/packages/varlet-ui/src/select/select.less
@@ -34,6 +34,7 @@
 .var-select {
   width: 100%;
   color: var(--select-select-text-color);
+  overflow: hidden;
 
   &__controller {
     width: 100%;
